--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,19 +1,36 @@
 @font-face {
-  font-family: 'Avenir Next Cyr Thin';
-  src: url('~@/assets/fonts/AvenirNextCyr-Thin.eot');
-  src: url('~@/assets/fonts/AvenirNextCyr-Thin.eot?#iefix') format('embedded-opentype'),
-  url('~@/assets/fonts/AvenirNextCyr-Thin.woff') format('woff'),
-  url('~@/assets/fonts/AvenirNextCyr-Thin.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'Gilroy-Medium';
+  src: url('~@/assets/fonts/gilroy-medium.eot');
+  src: url('~@/assets/fonts/gilroy-medium.eot?#iefix') format('embedded-opentype'),
+    url('~@/assets/fonts/gilroy-medium.woff2') format('woff2'),
+    url('~@/assets/fonts/gilroy-medium.woff') format('woff'),
+    url('~@/assets/fonts/gilroy-medium.ttf') format('truetype'),
+    url('~@/assets/fonts/gilroy-medium.svg#gilroy-medium') format('svg');
 }
-
 @font-face {
-  font-family: 'Noto Sans';
-  src: url('~@/assets/fonts/AvenirNextCyr-Thin.eot');
-  src: url('~@/assets/fonts/AvenirNextCyr-Thin.eot?#iefix') format('embedded-opentype'),
-  url('~@/assets/fonts/AvenirNextCyr-Thin.woff') format('woff'),
-  url('~@/assets/fonts/AvenirNextCyr-Thin.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'Gilroy-Light';
+  src: url('~@/assets/fonts/gilroy-light.eot');
+  src: url('~@/assets/fonts/gilroy-light.eot?#iefix') format('embedded-opentype'),
+    url('~@/assets/fonts/gilroy-light.woff2') format('woff2'),
+    url('~@/assets/fonts/gilroy-light.woff') format('woff'),
+    url('~@/assets/fonts/gilroy-light.ttf') format('truetype'),
+    url('~@/assets/fonts/gilroy-light.svg#gilroy-light') format('svg');
+}
+@font-face {
+  font-family: 'Gilroy-Bold';
+  src: url('~@/assets/fonts/gilroy-bold.eot');
+  src: url('~@/assets/fonts/gilroy-bold.eot?#iefix') format('embedded-opentype'),
+    url('~@/assets/fonts/gilroy-bold.woff2') format('woff2'),
+    url('~@/assets/fonts/gilroy-bold.woff') format('woff'),
+    url('~@/assets/fonts/gilroy-bold.ttf') format('truetype'),
+    url('~@/assets/fonts/gilroy-bold.svg#gilroy-bold') format('svg');
+}
+@font-face {
+  font-family: 'Gilroy-ExtraBold';
+  src: url('~@/assets/fonts/gilroy-extrabold.eot');
+  src: url('~@/assets/fonts/gilroy-extrabold.eot?#iefix') format('embedded-opentype'),
+    url('~@/assets/fonts/gilroy-extrabold.woff2') format('woff2'),
+    url('~@/assets/fonts/gilroy-extrabold.woff') format('woff'),
+    url('~@/assets/fonts/gilroy-extrabold.ttf') format('truetype'),
+    url('~@/assets/fonts/gilroy-extrabold.svg#gilroy-extrabold') format('svg');
 }
