--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,6 +6,7 @@
 	font-weight: 400;
 	color: #000000;
 	font-family: 'Gilroy-Medium';
+	box-shadow: none;
 }
 @mixin buttonColor($width, $backgroundColor, $color){
 	width: $width;
@@ -17,6 +18,7 @@
 	font-weight: 600;
 	font-size: 1rem;
 	font-family: 'Gilroy-Medium';
+	box-shadow: none;
 }
 @mixin textContent($fontSize, $lineHeight, $fontWeight, $color, $textAlign, $fontFamily){
 	font-size: $fontSize;
@@ -25,4 +27,8 @@
 	color: $color;
 	text-align: $textAlign;
 	font-family: $fontFamily;
+}
+@mixin errorInput(){
+	box-shadow: inset 0 0 10px #f80000;
+	border: solid 1px #f80000;
 }
