--- a/src/scss/styleForm.scss
+++ b/src/scss/styleForm.scss
@@ -1,7 +1,7 @@
 .modal{
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0,0,0,0.7);
   display: flex;
   position: fixed;
   left: 0;
@@ -22,8 +22,14 @@
     width: 90%;
     margin: auto;
   }
+  &__title>span{
+    @include textContent(1.5rem, 0.55, 300, #000, left, 'Gilroy-ExtraBold');
+  }
   &__field{
     position: relative;
+  }
+  &__label{
+    @include textContent(0.9rem, 0.55, 300, #000, left, 'Gilroy-Light');
   }
   &__input{
     border-radius: 0;
@@ -79,5 +85,117 @@
   }
   &__error{
     @include errorInput();
+  }
+  &__container{
+    position: relative;
+  }
+  &__container:hover>.modal__message{
+    display: flex;
+  }
+  &__login{
+    position: absolute;
+    display: flex;
+    right: 0;
+    top: 45%;
+    width: 15px;
+    height: 15px;
+  }
+  &__login>input{
+    position: relative;
+    margin: auto;
+  }
+  &__message{
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: none;
+    background-color: #E6E6E6;
+    border: 1px solid #000;
+  }
+  &__message>span{
+    @include textContent(0.8rem, 1.2, 500, #000, center, "Gilroy-Medium");
+    display: block;
+  }
+}
+@media (max-width: 1450px){
+}
+@media (max-width: 1200px){
+}
+@media (max-width: 967px){
+  .modal{
+    &__wrapper{
+      width: 600px;
+      height: 260px;
+      overflow: hidden;
+    }
+    &__form{
+      overflow: scroll;
+      height: 200px;
+      padding-bottom: 30px;
+    }
+    &__close{
+      right: 0;
+      top: 0;
+      border: 1px solid #fff;
+    }
+    &__field{
+      width: 90%;
+      margin: auto;
+    }
+  }
+}
+@media (max-width: 667px){
+  .modal{
+    &__wrapper{
+      width: 460px;
+    }
+  }
+}
+@media (max-width: 567px){
+  .modal{
+    &__wrapper{
+      width: 460px;
+      height: auto;
+      padding: 30px 10px;
+    }
+     &__form{
+      width: 100%;
+      height: auto;
+      padding-bottom: 0;
+    }
+    &__button>button{
+      width: 70%;
+    }
+    &__title>span{
+      font-size: 1rem;
+    }
+    &__input{
+      font-size: 12px;
+    }
+    &__label{
+      font-size: 12px;
+      margin-bottom: .1rem;
+    }
+    &__button-wrapper{
+      margin-top: 2rem!important;
+    }
+  }
+}
+@media (max-width: 467px){
+  .modal{
+    &__wrapper{
+      width: 360px;
+    }
+    &__button>button{
+      width: 100%;
+      font-size: 14px;
+    }
+  }
+}
+@media (max-width: 367px){
+  .modal{
+    &__wrapper{
+      width: 300px;
+    }
   }
 }
